# Hospital

./: README.md  package-lock.json
JS/: app.js  (+2 more)
backend/: .dockerignore  Dockerfile  pyproject.toml  run.py
backend/app/: __init__.py  extensions.py
backend/app/api/v1/endpoints/: admin.py  appointment.py  auth.py  doctor.py  doctorspecialization.py  doctortoappointcomment.py  doctortohospitalcomments.py  hospital.py  hospitalspecialization.py  owner.py  patient.py  patienttoappointcomment.py  (+3 more)
backend/app/models/: __init__.py  admin.py  appointment.py  basemodel.py  doctor.py  doctorspecialization.py  doctortoappointcomment.py  doctortohospitalcomments.py  hospital.py  hospitalspecialization.py  owner.py  patient.py  patienttoappointcomment.py  patienttodoctorcomment.py  patienttohospitalcomment.py  specialization.py  user.py
backend/app/models/abstract/: basemodel.py
backend/app/persistence/: abstract.py  repository.py
backend/app/persistence/modelRepository/: admin.py  appointment.py  doctor.py  doctorspecialization.py  doctortoappointcomment.py  doctortohospitalcomment.py  hospital.py  hospitalspecialization.py  owner.py  patient.py  patienttoappointcomment.py  patienttodoctorcomment.py  patienttohospitalcomment.py  specialization.py  user.py
backend/app/service/: admin.py  appointment.py  doctor.py  doctorspecialities.py  doctortoappointcomment.py  doctortohospitalcomment.py  facade.py  hospital.py  hospitalspecialities.py  owner.py  patient.py  patienttoappointcomment.py  patienttodoctorcomment.py  patienttohospitalcomment.py  specialities.py  user.py
(+45 files in other folders)
