[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Metin100 <9455@holbertonstudents.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.7"
sqlmodel = "^0.0.22"
pymysql = "^1.1.1"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
