[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Metin100 <9455@holbertonstudents.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.7"
sqlmodel = "^0.0.22"
pymysql = "^1.1.1"
uvicorn = "^0.34.0"
passlib = {extras = ["all"], version = "^1.7.4"}
jwt = "^1.3.1"
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
